--- a/megacitycabsystem/src/main/webapp/WEB-INF/web.xml
+++ b/megacitycabsystem/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,21 @@
 
 <web-app>
     <display-name>Megacity Cab System</display-name>
+    
+    <filter>
+	    <filter-name>NoCacheFilter</filter-name>
+	    <filter-class>org.apache.catalina.filters.ExpiresFilter</filter-class>
+	    <init-param>
+	        <param-name>ExpiresByType text/css</param-name>
+	        <param-value>access plus 0 seconds</param-value>
+	    </init-param>
+	</filter>
+	
+	<filter-mapping>
+	    <filter-name>NoCacheFilter</filter-name>
+	    <url-pattern>*.css</url-pattern>
+	</filter-mapping>
+    
 
     <!-- All servlets must be defined first -->
     <servlet>
@@ -135,4 +150,6 @@
     <welcome-file-list>
         <welcome-file>index.jsp</welcome-file>
     </welcome-file-list>
+    
+    
 </web-app>
