--- a/megacitycabsystem/.settings/org.eclipse.core.resources.prefs
+++ b/megacitycabsystem/.settings/org.eclipse.core.resources.prefs
@@ -3,4 +3,6 @@ encoding//src/main/java=UTF-8
 encoding//src/main/resources=UTF-8
 encoding//src/main/webapp/WEB-INF/views/admin/customers/editCustomer.jsp=UTF-8
 encoding//src/main/webapp/WEB-INF/views/adminDashboard.jsp=UTF-8
+encoding//src/test/java=UTF-8
+encoding//src/test/resources=UTF-8
 encoding/<project>=UTF-8
