--- a/megacitycabsystem/pom.xml
+++ b/megacitycabsystem/pom.xml
@@ -52,6 +52,21 @@
             <artifactId>gson</artifactId>
             <version>2.12.1</version>
         </dependency>
+        
+        <dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-junit-jupiter</artifactId>
+		    <version>5.3.1</version> <!-- Use the latest version -->
+		    <scope>test</scope>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.mockito</groupId>
+		    <artifactId>mockito-core</artifactId>
+		    <version>5.3.1</version>
+		    <scope>test</scope>
+		</dependency>
+
 
         <dependency>
             <groupId>org.junit.jupiter</groupId>
