--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     permissions:
-      contents: read
+      contents: write  # Allows pushing to gh-pages branch
 
     # Add MySQL service
     services:
@@ -21,7 +21,7 @@ jobs:
         image: mysql:8.0
         env:
           MYSQL_ROOT_PASSWORD: root1234
-          MYSQL_DATABASE: megacitycabs
+          MYSQL_DATABASE: megacitycabs 
         ports:
           - 3306:3306
         options: --health-cmd="mysqladmin ping" --health-interval=10s --health-timeout=5s --health-retries=5
@@ -56,24 +56,24 @@ jobs:
       run: |
         # Create a temporary script to handle the dump
         echo "SET FOREIGN_KEY_CHECKS=0;" > init_db.sql
-        cat megacitycabsystem/src/main/resources/megacitycabs_dump.sql >> init_db.sql
+        cat megacitycabsystem/src/main/resources/megacitycabs_dump.sql >> init_db.sql  # File name remains as previously set
         echo "SET FOREIGN_KEY_CHECKS=1;" >> init_db.sql
         # Execute the script
-        mysql -h 127.0.0.1 -u root -proot1234 megacitycabs < init_db.sql
+        mysql -h 127.0.0.1 -u root -proot1234 megacitycabs < init_db.sql  # Updated to megacitycabs
         rm init_db.sql
 
     # Step 6: Debug - Verify database content
     - name: Verify database initialization
-      run: mysql -h 127.0.0.1 -u root -proot1234 megacitycabs -e "SHOW TABLES;"
+      run: mysql -h 127.0.0.1 -u root -proot1234 megacitycabs -e "SHOW TABLES;" 
 
     # Step 7: Build with Maven (without tests)
     - name: Build with Maven
       run: mvn clean install -DskipTests
       working-directory: megacitycabsystem
 
-    # Step 8: Package application
-    - name: Package application
-      run: mvn package
+    # Step 8: Run tests with Maven
+    - name: Run tests
+      run: mvn test
       working-directory: megacitycabsystem
 
     # Step 9: Upload the artifact
